Fixed performance issues with the menu for selecting perspectives. Fixed an issue where removing a perspective or adding a perspective after load would not be added to the menu. Integrated the name window directly into the Perspective manager. Fixed some icon issues. Changed some text to be more descriptive.
git-svn-id: https://perspectives.svn.codeplex.com/svn@82033 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/Perspectives/Perspectives/Perspectives.csproj
+++ b/Perspectives/Perspectives/Perspectives.csproj
@@ -118,9 +118,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FavoritePerspectives.cs" />
-    <Compile Include="PerspectiveName.xaml.cs">
-      <DependentUpon>PerspectiveName.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Perspectives.xaml.cs">
       <DependentUpon>Perspectives.xaml</DependentUpon>
     </Compile>
@@ -146,6 +143,7 @@
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -163,23 +161,19 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Images_32bit.bmp" />
-    <None Include="Resources\Images_24bit.bmp" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="Resources\301.bmp" />
     <Resource Include="Resources\Images.bmp" />
     <Resource Include="current.ico" />
+    <Content Include="image1.PNG">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="perspectives_logo.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="Resources\Package.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="PerspectiveName.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Perspectives.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
